<resources>
    <string name="app_name">Hi-Health</string>
    <string name="google_maps_key">AIzaSyCWccuU1hk4AHAYTaEAe6fcI8znh5-K3wU</string>

    <!--<string name="app_name">Walk My Android</string>-->
    <!--Walk My Android-->
    <string name="get_location">Get Location</string>
    <string name="android_image">Android Image</string>
    <string name="textview_hint">Press the button to start tracking your
        location.
    </string>
    <string name="location_permission_denied">Location permissions denied,
        please enable the permissions to use this app.
    </string>
    <string name="location_text">"Latitude: %1$.4f \n Longitude: %2$.4f \n Timestamp: %3$tr"</string>

    <string name="address_text">"Address: %1$s \n Timestamp: %2$tr"</string>
    <string name="no_location">No location available</string>
    <string name="no_address_found">No address found</string>
    <string name="loading">Loading…</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid coordinates used</string>
    <string name="start_tracking_location">Start tracking location</string>
    <string name="stop_tracking_location">Stop tracking location</string>


    <!--Notification-->
    <string name="label_message">Message</string>

    <string name="text_label_reply">Reply</string>

    <string name="label_you_clicked">You clicked: %s</string>
    <string name="label_you_typed">You typed: %s</string>

    <string name="label_standard_notification">Show standard notification</string>
    <string name="label_bundled_notification">Show bundled notifications</string>
    <string name="label_direct_reply_notification">Show direct reply notification</string>
    <string name="label_custom_content_view_notification">Show custom content view notification</string>
    <string name="label_custom_content_big_view_notification">Show custom content big view notification</string>
    <string name="label_custom_content_normal_and_big_view_notification">Show custom normal and big content views notification</string>
    <string name="label_custom_media_content_view_notification">Show custom media content view notifications</string>
    <string name="label_heads_up_notification">Show heads up notification</string>
    <string name="label_heads_up_custom_layout_notification">Show custom layout heads up notification</string>



    <!-- ... -->
    <string name="facebook_application_id" translatable="false">APP_ID</string>
    <!-- Facebook Application ID, prefixed by 'fb'. Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fbAPP_ID</string>


    <string name="title_sign_out">Sair</string>
    <string name="title_data">Dados</string>
    <string name="title_contacts">Contatos</string>
    <string name="title_profile">Perfil</string>

    <string-array name="tipo_sanguineo">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="passos">Passos</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="nome">Nome</string>
    <string name="celular">Celular</string>
    <string name="dt_nascimento">Data de Nascimento</string>
    <string name="genero">Gênero</string>
    <string name="endereco_completo">Endereço Completo</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="obs_medica">Obeservação Médica</string>
    <string name="desc_obs_medica">Digite as obesvarções medicas aqui</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="login">Login</string>
    <string name="entrar">entrar</string>
    <string name="cadastrar_se">cadastrar-se</string>
    <string name="batimentos_cardiacos">Batimentos Cardíacos</string>
    <string name="chatbot">Chatbot</string>
    <string name="localizacao">Localização</string>
    <string name="amigos">Amigos</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="tipo_sanguineo">TIPO SANGUINEO</string>
    <string name="historico_doenca">Historico de Doença</string>
    <string name="title_alerta">Enviar Alerta</string>
    <string name="detail_alerta">Você deseja enviar um alerta de emergência para os seus contatos</string>
    <string name="title_add_contato">Adicionar Contato</string>
</resources>
