<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">


            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/celular"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edtBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dt_nascimento"
                android:inputType="date"
                android:maxLines="1"
                android:singleLine="true" />

            <RadioGroup android:id="@+id/rgGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genero"
                    android:textStyle="bold"
                    android:layout_marginRight="20dp"/>

                <RadioButton android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorAccent"
                    android:text="Masculino"
                    android:layout_marginRight="20dp" />

                <RadioButton android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorAccent"
                    android:text="Femenino" />
            </RadioGroup>

            <!--<EditText-->
                <!--android:id="@+id/edtDocument"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:hint="CPF"-->
                <!--android:inputType="number"-->
                <!--android:maxLines="1"-->
                <!--android:singleLine="true" />-->

            <EditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/endereco_completo"
                android:inputType="text"/>

            <EditText
                android:id="@+id/edtHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/altura"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edtWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/peso"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true" />


            <Spinner
                android:id="@+id/spinneerBlood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/tipo_sanguineo"
                android:layout_marginTop="10dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/obs_medica"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textStyle="normal|bold"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/edtObs"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:textAlignment="center"
                android:hint="@string/desc_obs_medica"/>


            <Button android:id="@+id/btnCadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_rose"
                android:text="@string/cadastrar"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:layout_gravity="bottom"/>


            <!--        <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/btn_rose"
                        android:text="Proximo"
                        android:textColor="#FFF"
                        android:textStyle="bold"
                        android:layout_gravity="bottom"/>-->
        </LinearLayout>

    </ScrollView>


</LinearLayout>
